<resources>
  <string name="app_name">ServiceApplication</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="start">Start</string>
  <string name="pause">Pause</string>
  <string name="hide_navigation">Hide Navigation</string>
  <string name="stop">STOP</string>
  <string name="title_activity_test">TestActivity</string>
  <!-- Strings used for fragments for navigation -->
  <string name="first_fragment_label">First Fragment</string>
  <string name="second_fragment_label">Second Fragment</string>
  <string name="next">Next</string>
  <string name="previous">Previous</string>

  <string name="hello_first_fragment">Hello first fragment</string>
  <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
  <string name="test">Test</string>
</resources>