<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
      name="mHomeFragmentViewModel"
      type="com.thienbinh.serviceapplication.viewModel.HomeFragmentViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
      android:id="@+id/tvCount"
      style="@style/textAppearanceLarge17"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@{String.valueOf(mHomeFragmentViewModel.count)}"
      app:layout_constraintBottom_toTopOf="@id/btnStopCount"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:textSize="@dimen/dp16_7"
      tools:ignore="SpUsage" />

    <Button
      android:id="@+id/btnStopCount"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/stop"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tvCount" />

    <Button
      android:id="@+id/btnStartCount"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/start"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="@id/btnPauseCount"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <Button
      android:id="@+id/btnPauseCount"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/pause"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@id/btnStartCount"
      app:layout_constraintTop_toTopOf="parent" />

    <Button
      android:id="@+id/btnHideNavigation"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/hide_navigation"
      android:backgroundTint="@color/blue015365"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/btnStartCount" />

    <Button
      android:id="@+id/btnGotoTest"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="68dp"
      android:text="@string/test"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.493"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btnStopCount"
      app:layout_constraintVertical_bias="0.0" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>